<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.eventDetails.EventDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dimen_20"
        android:layout_marginVertical="@dimen/dimen_20">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/client"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:fontFamily="@font/nunito_sans"
            android:textAlignment="center"
            android:text="@string/client"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/note"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:fontFamily="@font/nunito_sans"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/client"
            tools:text="Name" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:fontFamily="@font/nunito_sans"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_15sp"
            app:layout_constraintEnd_toStartOf="@+id/age"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:text="gender" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_15sp"
            app:layout_constraintEnd_toStartOf="@+id/email"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/gender"
            app:layout_constraintTop_toTopOf="@id/gender"
            tools:text="age" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/age"
            app:layout_constraintTop_toTopOf="@id/age"
            tools:text="email" />

        <TextView
            android:id="@+id/event"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:fontFamily="@font/tienne_bold"
            android:text="@string/event"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_arrow" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:drawablePadding="@dimen/dimen_10"
            android:fontFamily="@font/nunito_sans"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_15sp"
            android:textStyle="italic"
            app:drawableStartCompat="@drawable/ic_event_available"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:drawablePadding="@dimen/dimen_10"
            android:fontFamily="@font/nunito_sans"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_18sp"
            app:drawableStartCompat="@drawable/ic_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startDate"
            tools:text="Notes" />

        <TextView
            android:id="@+id/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:paddingHorizontal="@dimen/dimen_5"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_15sp"
            android:text="@string/to"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/endDate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/startDate"
            app:layout_constraintTop_toTopOf="@+id/startDate"
            tools:text="To" />

        <TextView
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:fontFamily="@font/nunito_sans"
            android:paddingHorizontal="@dimen/dimen_5"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_15sp"
            android:textStyle="italic"
            app:drawableStartCompat="@drawable/ic_access_time"
            app:layout_constraintEnd_toStartOf="@+id/to"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date"
            tools:text="@string/time" />

        <TextView
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:paddingHorizontal="@dimen/dimen_5"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_15sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/to"
            app:layout_constraintTop_toTopOf="@id/to"
            tools:text="@string/time" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>